Sync test data with scheme repo to pass tests, make vendor url optional

--- a/test/data/primer-schemes/schemes/sars-cov-2/midnight/1200/v2.0.0/info.yml
+++ b/test/data/primer-schemes/schemes/sars-cov-2/midnight/1200/v2.0.0/info.yml
@@ -1,8 +1,8 @@
-schema_version: 1.0.0-alpha
+schema_version: 1.0.0a
+organism: sars-cov-2
 name: midnight
 amplicon_size: 1200
-version: v2
-organism: sars-cov-2
+version: v2.0.0
 aliases:
 - midnight-ont-v2
 - midnight-idt-v1
