--- a/test/data/primer-schemes/schemes/sars-cov-2/artic/400/v4.1.0/info.yml
+++ b/test/data/primer-schemes/schemes/sars-cov-2/artic/400/v4.1.0/info.yml
@@ -1,8 +1,9 @@
-schema_version: 1.0.0-alpha
+schema_version: 1.0.0a
+organism: sars-cov-2
 name: artic
 amplicon_size: 400
-version: v4.1
-organism: sars-cov-2
+version: v4.1.0
+derived_from: sars-cov-2/artic/400/v4.0.0
 aliases:
 - ARTIC/V4.1
 developers:
@@ -16,7 +17,6 @@ definition_url: https://github.com/pha4ge/primer-schemes/tree/main/sars-cov-2/ar
 source_url: https://github.com/quick-lab/primerschemes/tree/main/primerschemes/artic-sars-cov-2/400/v4.1.0
 citations:
 - https://doi.org/10.1101%2F2020.09.04.283077
-derived_from: artic-v4
 license: CC-BY-SA-4.0
 primer_checksum: primaschema:3ef3e7bb23008684
 reference_checksum: primaschema:b1acd7163146bf17
