--- a/test/data/primer-schemes/schemes/sars-cov-2/artic/400/v4.1.0/info.yml
+++ b/test/data/primer-schemes/schemes/sars-cov-2/artic/400/v4.1.0/info.yml
@@ -20,3 +20,4 @@ citations:
 license: CC-BY-SA-4.0
 primer_checksum: primaschema:3ef3e7bb23008684
 reference_checksum: primaschema:b1acd7163146bf17
+status: DRAFT
